# genie-proxy

./: .env_template  .gitignore  README.md  app.yml  databricks.yml  genie_proxy_claude.md  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
src/genie_proxy/backend/: genie_service.py  models.py  queue_service.py  router.py
src/genie_proxy/backend/core/: _config.py  _defaults.py  lakebase.py
src/genie_proxy/ui/: index.html
src/genie_proxy/ui/lib/: api.ts
src/genie_proxy/ui/routes/: index.tsx
src/genie_proxy/ui/routes/_sidebar/: chat.tsx  queue.tsx  route.tsx  spaces.tsx
